--- a/front/pi2test/pi2test/pi2test.csproj
+++ b/front/pi2test/pi2test/pi2test.csproj
@@ -200,6 +200,7 @@
     <Content Include="Views\Client\Details.cshtml" />
     <Content Include="Views\Basket\Details.cshtml" />
     <Content Include="Views\Category\Details.cshtml" />
+    <Content Include="Views\Product\Stockalert.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
